--- a/Diffraction/CH2_04-Structure_Factors.ipynb
+++ b/Diffraction/CH2_04-Structure_Factors.ipynb
@@ -22,29 +22,13 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "**Spring 2024**\n",
-    "<table style=\"margin-right:auto;margin-left:0px\">\n",
-    "  <tr>\n",
-    "    <td>Gerd Duscher </td>\n",
-    "    <td>Khalid Hattar</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Microscopy Facilities</td> \n",
-    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
-    "  </tr>\n",
-    "  \n",
-    "  <tr>\n",
-    "    <td>Materials Science & Engineering</td>\n",
-    "    <td> Nuclear Engineering</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Institute of Advanced Materials & Manufacturing</td>\n",
-    "    <td> </td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td colspan=\"2\"><center> The University of Tennessee, Knoxville</center> </td>\n",
-    "  </tr>\n",
-    "</table>\n",
+    "**Spring 2025**<br>\n",
+    "by Gerd Duscher\n",
+    "\n",
+    "Microscopy Facilities<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
+    "Materials Science & Engineering<br>\n",
+    "The University of Tennessee, Knoxville\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes.\n",
     "\n"
@@ -65,11 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -116,9 +96,6 @@
    "metadata": {
     "slideshow": {
      "slide_type": "-"
-    },
-    "vscode": {
-     "languageId": "python"
     }
    },
    "outputs": [
@@ -180,9 +157,6 @@
     "scrolled": true,
     "slideshow": {
      "slide_type": "-"
-    },
-    "vscode": {
-     "languageId": "python"
     }
    },
    "outputs": [
@@ -230,10 +204,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "scrolled": true,
-    "vscode": {
-     "languageId": "python"
-    }
+    "scrolled": true
    },
    "outputs": [
     {
@@ -265,11 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -321,11 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -441,11 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -558,11 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate Structure Factors\n",
@@ -597,11 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -640,11 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -679,11 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -784,11 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -868,11 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
