--- a/Lab_Course/LAB_00-Introduction.ipynb
+++ b/Lab_Course/LAB_00-Introduction.ipynb
@@ -22,13 +22,14 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "**Spring 2025**<br>\n",
+    "by Gerd Duscher\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
+    "\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes."
    ]
