--- a/Introduction/CH1_06-Overview.ipynb
+++ b/Introduction/CH1_06-Overview.ipynb
@@ -139,6 +139,7 @@
     "## TEMs available in the UTK/ORNL area.\n",
     "- Zeiss Libra200 MC at UTK\n",
     "- ThermoFischer Spectra300 at UTK 5th order corrected\n",
+    "- JEOL 2100+ at Tennessee Ion Beam Materials Laboratory/UTK\n",
     "- Nion UltraSTEM 100 at ORNL/CNMS, 5th order corrected\n",
     "- JEOL 2100 at ORNL 3rd order corrected\n",
     "- FEI Titan at ORNL/CNMS, 3rd order corrected\n",
@@ -150,7 +151,7 @@
     "\n",
     "The dedicated STEMs are all equipped with a spherical aberration\n",
     "corrector by Nion. There are also four CEOS (Haider and Rose)\n",
-    "aberration corrected TEMs (FEI Titan and JEOLs).\n"
+    "aberration corrected TEMs (ThermoFisher and JEOL).\n"
    ]
   },
   {
@@ -470,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.8"
   },
   "toc": {
    "base_numbering": "7",
