--- a/Introduction/CH1_07-Electron_Optics.ipynb
+++ b/Introduction/CH1_07-Electron_Optics.ipynb
@@ -136,9 +136,9 @@
     "id": "u-YSfinDgaFA"
    },
    "source": [
-    "### Start screen on the computer of our TEM\n",
+    "### Start screen on the computer of our TEM: Thermo-Fisher Spectra 300\n",
     "\n",
-    "![start_screen](images/start_screen.png)"
+    "![start_screen](images/start_screen_Spectra.png)"
    ]
   },
   {
@@ -622,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.8"
   },
   "toc": {
    "base_numbering": "8",
