--- a/Diffraction/CH2_04-Structure_Factors.ipynb
+++ b/Diffraction/CH2_04-Structure_Factors.ipynb
@@ -814,9 +814,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py12",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py12"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -828,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.8"
   },
   "livereveal": {
    "height": 768,
