--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -465,6 +465,7 @@
     },
     "id": "14A9VNZmlFyD",
     "outputId": "97e71229-6b2b-4cda-a356-423a7a72d268",
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
