--- a/Homework/Homework02.ipynb
+++ b/Homework/Homework02.ipynb
@@ -50,13 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "installing pyTEMlib\n",
       "done\n"
      ]
     }
@@ -69,11 +70,11 @@
     "    try:\n",
     "        version = importlib.metadata.version(package_name)\n",
     "    except importlib.metadata.PackageNotFoundError:\n",
-    "        version = -1\n",
+    "        version = '-1'\n",
     "    return version\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
-    "if test_package('pyTEMlib') < '0.2024.1.0':\n",
+    "if test_package('pyTEMlib') < '0.2025.1.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
@@ -84,22 +85,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the plotting and pyTEMlib packages"
+    "### Load the plotting and pyTEMlib packages\n",
+    "\n",
+    "Note: \n",
+    "\n",
+    "On Google colab you might have to restart the session in Menu: Runtime-Restart Session (Crtl-M) !"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib widget\n",
     "import matplotlib.pylab as plt\n",
@@ -129,13 +126,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05915cc36d3c430e8914248d1eb6ce88",
+       "model_id": "7607e4c1638c4f0dae1af610e8e3c114",
        "version_major": 2,
        "version_minor": 0
       },
