--- a/Diffraction/CH2_00-Diffraction.ipynb
+++ b/Diffraction/CH2_00-Diffraction.ipynb
@@ -146,7 +146,7 @@
     "  </tr>\n",
     "  <tr>\n",
     "    <td>$\\frac{\\partial \\sigma}{\\partial \\Omega}$</td>\n",
-    "    <td>cross-section</td>\n",
+    "    <td>differential cross-section</td>\n",
     "    <td> scattering probability in a solid angle </td>\n",
     "  </tr>\n",
     "  <tr>\n",
