--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "id": "l7FfJuYGlFxz"
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -214,14 +214,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classic wave length is 2.24 pm for acceleration voltage 300.0 kV\n",
-      " which is a velocity of 324852582.95 m/s or 108.36% of the speed of light\n"
+      "Classic wave length is 3.88 pm for acceleration voltage 100.0 kV\n",
+      " which is a velocity of 187553726.21 m/s or 62.56% of the speed of light\n"
      ]
     }
    ],
    "source": [
     "# --------- input  ---------------------------\n",
-    "acceleration_voltage_V = U = 300.0 * 1000.0 #V\n",
+    "acceleration_voltage_V = U = 100.0 * 1000.0 #V\n",
     "# --------------------------------------------\n",
     "## energy\n",
     "E_kin = acceleration_voltage_V * scipy.constants.elementary_charge\n",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -273,13 +273,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The relativistically corrected wave length is 1.97 pm for acceleration voltage 300.0 kV\n"
+      "The relativistically corrected wave length is 3.70 pm for acceleration voltage 100.0 kV\n"
      ]
     }
    ],
    "source": [
     "# ---------Input: Acceleration Voltage --\n",
-    "E0 = acceleration_voltage_V = 300.0 *1000.0 # V\n",
+    "E0 = acceleration_voltage_V = 100.0 *1000.0 # V\n",
     "# ---------------------------------------\n",
     "E_kin = acceleration_voltage_V * scipy.constants.elementary_charge\n",
     "h = scipy.constants.Planck\n",
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -344,9 +344,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For an acceleration voltage of 300keV: \n",
-      "The classic velocity of the electron  is 324852582.95 m/s or 108.36% of the speed of light\n",
-      "The relativistic velocity of the electron  is 232796486.28 m/s or 77.65% of the speed of light\n"
+      "For an acceleration voltage of 100keV: \n",
+      "The classic velocity of the electron  is 187553726.21 m/s or 62.56% of the speed of light\n",
+      "The relativistic velocity of the electron  is 164352479.73 m/s or 54.82% of the speed of light\n"
      ]
     }
    ],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -382,11 +382,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
-      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
-      "Symmetry functions of spglib enabled\n",
-      "Qt dialogs are not available\n",
-      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
       "The relativistically corrected wave length is 6.98 pm for acceleration voltage 30.0 kV\n"
      ]
     }
@@ -422,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -439,7 +434,7 @@
       "\n",
       "get_wavelength(acceleration_voltage)\n",
       "    Calculates the relativistic corrected de Broglie wavelength of an electron in Angstrom\n",
-      "    \n",
+      "\n",
       "    Parameter:\n",
       "    ---------\n",
       "    acceleration_voltage: float\n",
@@ -458,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -481,34 +476,34 @@
       "DESCRIPTION\n",
       "    kinematic_scattering\n",
       "    Copyright by Gerd Duscher\n",
-      "    \n",
+      "\n",
       "    The University of Tennessee, Knoxville\n",
       "    Department of Materials Science & Engineering\n",
-      "    \n",
+      "\n",
       "    Sources:\n",
       "       Scattering Theory:\n",
       "       Zuo and Spence, \"Advanced TEM\", 2017\n",
-      "    \n",
+      "\n",
       "       Spence and Zuo, Electron Microdiffraction, Plenum 1992\n",
-      "    \n",
+      "\n",
       "       Atomic Form Factor:\n",
       "           Kirkland: Advanced Computing in Electron Microscopy 2nd edition\n",
       "           Appendix C\n",
-      "    \n",
+      "\n",
       "    Units:\n",
       "        everything is in SI units, except length which is given in Angstrom.\n",
-      "    \n",
+      "\n",
       "    Usage:\n",
       "        See the notebooks for examples of these routines\n",
-      "    \n",
+      "\n",
       "    All the input and output is done through a ase.Atoms object and the dictionary in the info attribute\n",
       "\n",
       "FUNCTIONS\n",
       "    Zuo_fig_3_18(verbose=True)\n",
       "        Input for Figure 3.18 in Zuo and Spence \"Advanced TEM\", 2017\n",
-      "        \n",
+      "\n",
       "        This input acts as an example as well as a reference\n",
-      "        \n",
+      "\n",
       "        Parameters:\n",
       "        -----------\n",
       "        verbose: boolean:\n",
@@ -519,64 +514,64 @@
       "                Silicon crystal structure\n",
       "            e\n",
       "            dictionary: tags is the dictionary of all input and output parameter needed to reproduce that figure.\n",
-      "    \n",
+      "\n",
       "    check_sanity(atoms, verbose_level=0)\n",
       "        Check sanity of input parameters\n",
-      "    \n",
+      "\n",
       "    example(verbose=True)\n",
       "        same as Zuo_fig_3_18\n",
-      "    \n",
+      "\n",
       "    feq(element, q)\n",
       "        Atomic form factor parametrized in 1/Angstrom but converted to 1/Angstrom\n",
-      "        \n",
+      "\n",
       "        The atomic form factor is from Kirkland: Advanced Computing in Electron Microscopy 2nd edition, Appendix C.\n",
       "        From Appendix C of Kirkland, \"Advanced Computing in Electron Microscopy\", 3Ard ed.\n",
       "        Calculation of electron form factor for specific q:\n",
       "        Using equation Kirkland C.15\n",
-      "        \n",
+      "\n",
       "        Parameters\n",
       "        ----------\n",
       "        element: string\n",
       "            element name\n",
       "        q: float\n",
       "            magnitude of scattering vector in 1/Angstrom -- (=> exp(-i*g.r), physics negative convention)\n",
-      "        \n",
+      "\n",
       "        Returns\n",
       "        -------\n",
       "        fL+fG: float\n",
       "            atomic scattering vector\n",
-      "    \n",
+      "\n",
       "    find_angles(zone)\n",
       "        Microscope stage coordinates of zone\n",
-      "    \n",
+      "\n",
       "    find_nearest_zone_axis(tags)\n",
       "        Test all zone axis up to a maximum of hkl_max\n",
-      "    \n",
+      "\n",
       "    get_all_miller_indices(hkl_max)\n",
-      "    \n",
+      "\n",
       "    get_dynamically_allowed(atoms, verbose=False)\n",
-      "    \n",
+      "\n",
       "    get_metric_tensor(matrix)\n",
       "        The metric tensor of the lattice.\n",
-      "    \n",
+      "\n",
       "    get_rotation_matrix(angles, in_radians=False)\n",
       "        Rotation of zone axis by mistilt\n",
-      "        \n",
+      "\n",
       "        Parameters\n",
       "        ----------\n",
       "        angles: ist or numpy array of float\n",
       "            list of mistilt angles (default in degrees)\n",
       "        in_radians: boolean default False\n",
       "            default is angles in degrees\n",
-      "        \n",
+      "\n",
       "        Returns\n",
       "        -------\n",
       "        rotation_matrix: np.ndarray (3x3)\n",
       "            rotation matrix in 3d\n",
-      "    \n",
+      "\n",
       "    get_wavelength(acceleration_voltage)\n",
       "        Calculates the relativistic corrected de Broglie wavelength of an electron in Angstrom\n",
-      "        \n",
+      "\n",
       "        Parameter:\n",
       "        ---------\n",
       "        acceleration_voltage: float\n",
@@ -585,15 +580,15 @@
       "        -------\n",
       "        wavelength: float\n",
       "            wave length in Angstrom (= meter *10**10)\n",
-      "    \n",
+      "\n",
       "    get_zone_rotation(tags)\n",
       "        zone axis in global coordinate system\n",
-      "    \n",
+      "\n",
       "    kinematic_scattering(atoms, verbose=False)\n",
       "        All kinematic scattering calculation\n",
-      "        \n",
+      "\n",
       "        Calculates Bragg spots, Kikuchi lines, excess, and deficient HOLZ lines\n",
-      "        \n",
+      "\n",
       "        Parameters\n",
       "        ----------\n",
       "        atoms: ase.Atoms\n",
@@ -605,7 +600,7 @@
       "            verbose = True will give extended output of the calculation\n",
       "        verbose: boolean\n",
       "            default is False\n",
-      "        \n",
+      "\n",
       "        Returns\n",
       "        -------\n",
       "        atoms:\n",
@@ -618,31 +613,31 @@
       "                ['slope'], ['distance'], ['theta'], ['g_deficient'], ['g_excess'], ['hkl'], ['intensities'],\n",
       "                ['ZOLZ'], ['FOLZ'], ['SOLZ'], ['HOLZ'], and  ['HHOLZ']\n",
       "            Please note that the Kikuchi lines are the HOLZ lines of ZOLZ\n",
-      "        \n",
+      "\n",
       "            There are also a few parameters stored in the main dictionary:\n",
       "                ['wave_length_nm'], ['reciprocal_unit_cell'], ['inner_potential_V'], ['incident_wave_vector'],\n",
       "                ['volume'], ['theta'], ['phi'], and ['incident_wave_vector_vacuum']\n",
-      "    \n",
+      "\n",
       "    make_pretty_labels(hkls, hex_label=False)\n",
       "        Make pretty labels\n",
-      "        \n",
+      "\n",
       "        Parameters\n",
       "        ----------\n",
       "        hkls: np.ndarray\n",
       "            a numpy array with all the Miller indices to be labeled\n",
       "        hex_label: boolean - optional\n",
       "            if True this will make for Miller indices.\n",
-      "        \n",
+      "\n",
       "        Returns\n",
       "        -------\n",
       "        hkl_label: list\n",
       "            list of labels in Latex format\n",
-      "    \n",
+      "\n",
       "    read_poscar(filename)\n",
-      "    \n",
+      "\n",
       "    ring_pattern_calculation(atoms, verbose=False)\n",
       "        Calculate the ring diffraction pattern of a crystal structure\n",
-      "        \n",
+      "\n",
       "        Parameters\n",
       "        ----------\n",
       "        atoms: Crystal\n",
@@ -653,28 +648,28 @@
       "        -------\n",
       "        tags: dict\n",
       "            dictionary with diffraction information added\n",
-      "    \n",
+      "\n",
       "    scattering_matrix(tags, verbose_level=1)\n",
       "        Scattering matrix\n",
-      "    \n",
+      "\n",
       "    stage_rotation_matrix(alpha, beta)\n",
       "        Microscope stage coordinate system\n",
-      "    \n",
+      "\n",
       "    vector_norm(g)\n",
       "        Length of vector\n",
-      "        \n",
+      "\n",
       "        depreciated - use np.linalg.norm\n",
-      "    \n",
+      "\n",
       "    zone_mistilt(zone, angles)\n",
       "        Rotation of zone axis by mistilt\n",
-      "        \n",
+      "\n",
       "        Parameters\n",
       "        ----------\n",
       "        zone: list or numpy array of int\n",
       "            zone axis in Miller indices\n",
       "        angles: ist or numpy array of float\n",
       "            list of mistilt angles in degree\n",
-      "        \n",
+      "\n",
       "        Returns\n",
       "        -------\n",
       "        new_zone_axis: np.ndarray (3)\n",
@@ -693,7 +688,7 @@
       "    optional_inputKeys = ['crystal', 'lattice_parameter_nm', 'convergence_...\n",
       "\n",
       "FILE\n",
-      "    /usr/local/lib/python3.11/dist-packages/pyTEMlib/kinematic_scattering.py\n",
+      "    c:\\users\\gduscher\\appdata\\local\\anaconda3\\lib\\site-packages\\pytemlib\\kinematic_scattering.py\n",
       "\n",
       "\n"
      ]
@@ -725,14 +720,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "-js6jZ1dlFyF",
-    "outputId": "4191f46d-0552-4f1f-8175-630e1bc327a7",
-    "scrolled": true
+    "outputId": "4191f46d-0552-4f1f-8175-630e1bc327a7"
    },
    "outputs": [
     {
