--- a/Homework/Homework02.ipynb
+++ b/Homework/Homework02.ipynb
@@ -94,9 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
+      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
+      "Symmetry functions of spglib enabled\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib widget\n",
     "import matplotlib.pylab as plt\n",
@@ -126,13 +137,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7607e4c1638c4f0dae1af610e8e3c114",
+       "model_id": "93a31605529d4373a5440f03cbc1c22b",
        "version_major": 2,
        "version_minor": 0
       },
