--- a/Homework/Homework03.ipynb
+++ b/Homework/Homework03.ipynb
@@ -61,7 +61,7 @@
     "    try:\n",
     "        version = importlib.metadata.version(package_name)\n",
     "    except importlib.metadata.PackageNotFoundError:\n",
-    "        version = -1\n",
+    "        version = '-1'\n",
     "    return version\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
