--- a/Homework/Homework03.ipynb
+++ b/Homework/Homework03.ipynb
@@ -65,7 +65,7 @@
     "    return version\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
-    "if test_package('pyTEMlib') < '0.2024.1.0':\n",
+    "if test_package('pyTEMlib') < '0.2025.1.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
@@ -76,7 +76,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the plotting and pyTEMlib packages"
+    "### Load the plotting and pyTEMlib packages\n",
+    "\n",
+    "Google Colab: Make sure to restart the Session (Crtl-M)"
    ]
   },
   {
@@ -102,7 +104,7 @@
     "# For archiving reasons it is a good idea to print the version numbers out at this point\n",
     "print('pyTEM version: ',pyTEMlib.__version__)\n",
     "__notebook__='CH1_04-Reading_File'\n",
-    "__notebook_version__='2024_01_09'"
+    "__notebook_version__='2025_03_09'"
    ]
   },
   {
