--- a/Diffraction/CH2_07-Plotting_Diffraction_Pattern.ipynb
+++ b/Diffraction/CH2_07-Plotting_Diffraction_Pattern.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -107,6 +107,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
+      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
+      "Symmetry functions of spglib enabled\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
       "pyTEM version:  0.2025.01.0\n",
       "notebook version:  2022.01.22\n"
      ]
@@ -155,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -210,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -320,13 +324,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df8ca1e55e74485fb3ee466c9b0c47db",
+       "model_id": "9289a714020f4d5e9228469938b50fe0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -377,13 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50d8c08a29be4995aafd59f797e81ec0",
+       "model_id": "87971e28726747fc8534e896aa6ebcd4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -441,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -534,13 +538,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d322161b42d4889b5bf4c1090268d84",
+       "model_id": "e3b1d64784f647d6807410e79541950f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -595,13 +599,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e3e48bd363e4ad1aac942f36b27e82e",
+       "model_id": "de83adbc01fd4511a538ff3d8c8f33f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -653,13 +657,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5848876a2e764e35896bd7548bfaeb33",
+       "model_id": "01e911d1946446b9a89454d7780c876e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -714,13 +718,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d56011b8c2f4a5985af9c3316772d9c",
+       "model_id": "baccc6d79a4f46438b7e0ce946523865",
        "version_major": 2,
        "version_minor": 0
       },
@@ -780,13 +784,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c03defac4b6941b0bb6238f05376a01a",
+       "model_id": "689e5f7461814b94b8c399093a70d206",
        "version_major": 2,
        "version_minor": 0
       },
@@ -873,23 +877,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ebc6416870>"
+       "<matplotlib.legend.Legend at 0x17ef95c9460>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42cfed1800d34f14be1eaeffe8091728",
+       "model_id": "2579fc58062849759dd06fc74a6d68bb",
        "version_major": 2,
        "version_minor": 0
       },
