--- a/Homework/Homework03.ipynb
+++ b/Homework/Homework03.ipynb
@@ -166,7 +166,7 @@
    "source": [
     "if 'google.colab' in sys.modules:\n",
     "    drive.mount(\"/content/drive\")\n",
-    "fileWidget = ft.FileWidget()"
+    "fileWidget = ft.FileWidget(sum_frames=True)"
    ]
   },
   {
