--- a/Diffraction/CH2_D01-Bloch.ipynb
+++ b/Diffraction/CH2_D01-Bloch.ipynb
@@ -23,29 +23,13 @@
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
     "\n",
-    "**Spring 2024**\n",
-    "<table style=\"margin-right:auto;margin-left:0px\">\n",
-    "  <tr>\n",
-    "    <td>Gerd Duscher </td>\n",
-    "    <td>Khalid Hattar</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Microscopy Facilities</td> \n",
-    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
-    "  </tr>\n",
-    "  \n",
-    "  <tr>\n",
-    "    <td>Materials Science & Engineering</td>\n",
-    "    <td> Nuclear Engineering</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Institute of Advanced Materials & Manufacturing</td>\n",
-    "    <td> </td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td colspan=\"2\"><center> The University of Tennessee, Knoxville</center> </td>\n",
-    "  </tr>\n",
-    "</table>\n",
+    "**Spring 2025**<br>\n",
+    "by Gerd Duscher\n",
+    "\n",
+    "Microscopy Facilities<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
+    "Materials Science & Engineering<br>\n",
+    "The University of Tennessee, Knoxville\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes\n"
    ]
@@ -380,8 +364,8 @@
     "\\right) \\cdot \n",
     "\\left(\n",
     "\\begin{matrix}\n",
-    "\\epsilon^{(1)} \\\\\n",
-    "\\epsilon^{(2)} \\\\\n",
+    "\\gamma^{(1)} \\\\\n",
+    "\\gamma^{(2)} \\\\\n",
     "\\end{matrix}\n",
     "\\right) =\n",
     "\\left(\n",
@@ -653,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.8"
   },
   "toc": {
    "base_numbering": "14",
