--- a/Diffraction/CH2_D02-Multislice.ipynb
+++ b/Diffraction/CH2_D02-Multislice.ipynb
@@ -26,29 +26,13 @@
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
     "\n",
-    "**Spring 2024**\n",
-    "<table style=\"margin-right:auto;margin-left:0px\">\n",
-    "  <tr>\n",
-    "    <td>Gerd Duscher </td>\n",
-    "    <td>Khalid Hattar</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Microscopy Facilities</td> \n",
-    "    <td> Tennessee Ion Beam Materials Laboratory </td>\n",
-    "  </tr>\n",
-    "  \n",
-    "  <tr>\n",
-    "    <td>Materials Science & Engineering</td>\n",
-    "    <td> Nuclear Engineering</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>Institute of Advanced Materials & Manufacturing</td>\n",
-    "    <td> </td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td colspan=\"2\"><center> The University of Tennessee, Knoxville</center> </td>\n",
-    "  </tr>\n",
-    "</table>\n",
+    "**Spring 2025**<br>\n",
+    "by Gerd Duscher\n",
+    "\n",
+    "Microscopy Facilities<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
+    "Materials Science & Engineering<br>\n",
+    "The University of Tennessee, Knoxville\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes\n"
    ]
@@ -1384,9 +1368,9 @@
  "metadata": {
   "hide_code_all_hidden": false,
   "kernelspec": {
-   "display_name": "pyTEMlib",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytemlib"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1398,7 +1382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.8"
   },
   "toc": {
    "base_numbering": 1,
