--- a/Homework/Homework05.ipynb
+++ b/Homework/Homework05.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "#  Homework 5\n",
     "\n",
-    "<font size = \"5\"> AAnalyzing Spot and CBED Pattern</font>\n",
+    "<font size = \"5\"> Analyzing Spot and CBED Pattern</font>\n",
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Homework/Homework05.ipynb)\n",
     "\n",
@@ -158,7 +158,8 @@
     "If you run this notebook on your own computer you should download your images from the [google drive for 2025 Lab Data](https://drive.google.com/drive/folders/1jZKyvi9r9gUcF5XD-D69MX5foZKHi3yN?usp=drive_link), if you run it on google colab you can go to the drive directory in the dialog below. \n",
     "\n",
     "\n",
-    "First we select the diffraction pattern"
+    "First we select the diffraction pattern\n",
+    "Go to the folder of your data in the **Lab03** folder and select one "
    ]
   },
   {
